Adjusted width to avoid cut off

--- a/app/modules/accounts/style.scss
+++ b/app/modules/accounts/style.scss
@@ -134,7 +134,7 @@
     width: 200px;
 
     &.narrow {
-      width: 150px;
+      width: 139px;
 
       @media (max-width: $bp-large) {
         width: 135px;
